test/files/neg/t593.scala
trait Wrapper[T](x : T) {
}
