test/files/neg/t593.check
t593.scala:1: error: traits or objects may not have parameters
trait Wrapper[T](x : T) {
                ^
1 error
